--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a href="www.alura.com" class="container__botao secundario__botao">Assine o Combo+</a>  
         </div>
-        <img src="img/Telas.png" alt="Telas da plataforma" class="secundario__imgaem">
+        <img src="img/Telas.png" alt="Telas da plataforma" class="secundario__imagem">
     </section>
     <section class="container secundario">
         <img src="img/Notebook.png" alt="Um notebook exibindo a página inicial de um curso aluna">
